<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/user_profile_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="25dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_avatar_image_view"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/user_avatar_image_view"
            app:layout_constraintStart_toEndOf="@id/user_avatar_image_view"
            app:layout_constraintTop_toTopOf="@id/user_avatar_image_view">

            <TextView
                android:id="@+id/welcome_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/welcome" />

            <TextView
                android:id="@+id/user_name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/tony_roshdy"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/arrow"
            app:layout_constraintBottom_toBottomOf="@+id/user_avatar_image_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/user_avatar_image_view" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/explore_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:paddingStart="0dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:id="@+id/explore_select_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="-3dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/selected"
                    android:visibility="invisible"
                    tools:visibility="visible" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="30dp"
                    android:contentDescription="@string/explore"
                    android:src="@drawable/explore" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:text="@string/explore" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/live_chat_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:paddingStart="0dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:id="@+id/live_chat_select_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="-3dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/selected"
                    android:visibility="invisible" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="30dp"
                    android:contentDescription="@string/live_chat"
                    android:src="@drawable/live" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:text="@string/live_chat" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/gallery_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:paddingStart="0dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:id="@+id/gallery_select_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="-3dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/selected"
                    android:visibility="invisible" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="30dp"
                    android:contentDescription="@string/gallery"
                    android:src="@drawable/gallery" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:text="@string/gallery" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/wish_list_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:paddingStart="0dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:id="@+id/wish_list_select_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="-3dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/selected"
                    android:visibility="invisible" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="30dp"
                    android:contentDescription="@string/wish_list"
                    android:src="@drawable/wishlist" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:text="@string/wish_list" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/e_magazine_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:paddingStart="0dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:id="@+id/e_magazine_select_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="-3dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/selected"
                    android:visibility="invisible" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="30dp"
                    android:contentDescription="@string/e_magazine"
                    android:src="@drawable/e_magazine" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:text="@string/e_magazine" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>



